# QD-Parameterization

./: .gitignore  README.md  config.example.yaml  config.yaml  current_fitter.py  generate_lammps_files.py  gnn_morse_fitter.py  lammps_export.py  models.py  plotting.py  pyproject.toml  requirements.txt  rerun_instructions.md  run.config  run.yaml  run_analysis.py  utils.py
gnn_morse/: __main__.py  data.py  generate_lammps_files.py  gnn_morse_fitter.py  labelling.py  lammps_export.py  models.py  plotting.py  run_analysis.py  utils.py  visualize_structure.py
potentials/: __init__.py  base.py  born.py  buckingham.py  damped_buck.py  double_exp.py  lj.py  many_body_base.py  mie.py  morse.py  rydberg.py  soft_core_lj.py  stillinger_weber.py  tersoff.py  yukawa.py
sw_fitter/: __init__.py  __main__.py  data.py  fitter.py  lammps_export.py  models.py  plotting.py  utils.py
sw_fitter/consistency/: consistency_check.py
